--- a/src/components/sections/past-deals/past-deals.module.scss
+++ b/src/components/sections/past-deals/past-deals.module.scss
@@ -2,7 +2,8 @@
 
 .section__past_deals {
 	position: relative;
-	min-width: 100%;
+	width: 100%;
+
 
 	padding-top: clamp(4rem, 8vw, 9.6rem);
 	padding-bottom: clamp(6rem, 8vw, 11.8rem);
@@ -74,6 +75,7 @@ transform: translate(calc(-50% - clamp(1.6rem, 6vw, 8rem)), -100%);
 
 @media screen and (max-width: $point768) {
 	.section__past_deals {
+		min-width: 100%;
 		&::before {
 			width: 60%;
 
